# Adaptive-Huffman-Coding

./: .gitignore  CMakeLists.txt  README.md
res/: mock_data  test_data
script/: check_integrity.sh  plot_freq.py
src/: adaptive_huffman.cpp  adaptive_huffman.h  adaptive_huffman_main.cpp  argparse.cpp  argparse.h  coder.cpp  coder.h  dataloader.cpp  dataloader.h  dataloader.tpp  huffman.cpp  huffman.h  huffman.tpp  huffman_main.cpp  node.cpp  node.h  static_tree.cpp  static_tree.h  tree.cpp  tree.h  utils.cpp  utils.h
tests/: adaptive_huffman_test.cpp  dataloader_test.cpp  huffman_test.cpp  node_test.cpp  tree_test.cpp
